--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.4.1",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.1",
-    "sass": "^1.32.4"
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1"
   }
 }
